# Squazzle

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  cmake_install.cmake
include/core/: CoreData.hpp  Game.hpp  Menu.hpp
source/: main.cpp
src/: Main.cpp
src/core/: CoreData.cpp  Game.cpp  Menu.cpp
